--- a/css/1.css
+++ b/css/1.css
@@ -54,6 +54,12 @@ table {
 	border-spacing: 0;
 }
 
+/* Positioning */
+/* Box-model */
+/* Typography */
+/* Visual */
+/* Misc */
+
 /* 	==============================================
 		BEGIN AUTHOR STYLING
 	============================================== */
@@ -64,6 +70,11 @@ table {
 
 body {
 	/*background-color: black;*/
+	background-image: url('http://www.lastwordonnothing.com/wp-content/uploads/2011/07/2000px-Book_red_question_marks.png');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: 30%;
+    background-position: center; 
 }
 
 .container {
@@ -90,6 +101,21 @@ h1 {
 	font-weight: 700;
 	text-align: center;
 	font-size: 40px;
+}
+
+h2 {
+	padding: 30px 10px 10px 10px;
+	text-align: center;
+	font-family: 'PT-Sans', sans-serif;
+	font-weight: 400;
+	font-size: 16px;
+}
+
+p {
+	padding: 0 15px 0 15px;
+	font-family: 'PT-Mono', monospace;
+	font-weight: 400;
+	font-size: 13px;
 }
 
 /* 	=============================
@@ -121,7 +147,13 @@ h1 {
 	left: 0;
 	width:60px;
 	background-color: red;
+	z-index: 100;
 
+}
+
+.intro:hover,
+.afterwards:hover {
+	cursor: pointer;
 }
 
 .title {
@@ -142,6 +174,35 @@ h1 {
 	bottom: 0;
 	width:60px;
 	background-color: red;
+	z-index: 100;
+
+}
+
+/* 	=============================
+		HEADER TEXT
+	============================= */
+
+.intro-text {
+	position: fixed;
+	top: 60px;
+	left: -1000px;
+	bottom: 0;
+	width: 50%;
+	background-color: white;
+	border-right: 1px solid red;
+	z-index: 0;
+
+}
+
+.afterwards-text {
+	position: fixed;
+	top: 60px;
+	right: -1000px;
+	bottom: 0;
+	width: 50%;
+	background-color: white;
+	border-left: 1px solid red;
+	z-index: 0;
 
 }
 
@@ -149,7 +210,84 @@ h1 {
 		TABLE Styling
 	============================= */
 
-.table {
-	
+.table-container {
+	/* Box-model */
+	width: 80%;
+	margin-top: 100px;
+	margin-left: 10%;
+	margin-bottom: 50px;
+	/* Typography */
+	/* Visual */
+	border: 1px solid red;
+	border-radius: 10px;
+	-webkit-border-radius: 10px;
+	-moz-border-radius: 10px;
+	/* Misc */
 }
+
+td {
+	height: 500px;
+	border-right: 1px solid red;
+	border-bottom: 1px solid red;
+
+	background-image: url('../img/title2.png');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 55%;
+}
+
+td:nth-child(5) {
+	border-right: none;
+}
+
+.no-bottom {
+	border-bottom: none;
+}
+
+td a {
+	width: 15.9%;
+	position: absolute;
+	height: 500px;
+	display:block;
+    text-decoration:none;
+}
+
+a:hover {
+	cursor: default;
+}
+
+td:hover {
+	background-color: red;
+}
+
+.tl {
+	border-radius: 10px 0 0 0;
+	-webkit-border-radius: 10px 0 0 0;
+	-moz-border-radius: 10px 0 0 0;
+}
+
+.tr {
+	border-radius: 0 10px 0 0;
+	-webkit-border-radius: 0 10px 0 0;
+	-moz-border-radius: 0 10px 0 0;
+}
+
+.br {
+	border-radius: 0 0 10px 0;
+	-webkit-border-radius: 0 0 10px 0;
+	-moz-border-radius: 0 0 10px 0;
+}
+
+.bl {
+	border-radius: 0 0 0 10px;
+	-webkit-border-radius: 0 0 0 10px;
+	-moz-border-radius: 0 0 0 10px;
+}
+
+.bottom-bar {
+	width: 100%;
+	height: 60px;
+	background-color: red;
+}
+
 
