--- a/css/1.css
+++ b/css/1.css
@@ -97,7 +97,7 @@ body {
 
 h1 {
 	color: white;
-	font-family: 'PT-Sans', sans-serif;
+	font-family: 'PT Sans', sans-serif;
 	font-weight: 700;
 	text-align: center;
 	font-size: 40px;
@@ -106,16 +106,30 @@ h1 {
 h2 {
 	padding: 30px 10px 10px 10px;
 	text-align: center;
-	font-family: 'PT-Sans', sans-serif;
+	font-family: 'PT Sans', sans-serif;
 	font-weight: 400;
 	font-size: 16px;
 }
 
+h3 {
+	padding: 15px 15px 0 15px;
+	line-height: 30px;
+	font-family: 'PT Serif Caption', serif;
+	font-weight: 400;
+	font-size: 28px;
+	color: red;
+}
+
 p {
 	padding: 0 15px 0 15px;
-	font-family: 'PT-Mono', monospace;
+	font-family: 'PT Mono', monospace;
 	font-weight: 400;
 	font-size: 13px;
+}
+
+#click1,
+#click2 {
+	width: 100%;
 }
 
 /* 	=============================
@@ -190,7 +204,7 @@ p {
 	width: 50%;
 	background-color: white;
 	border-right: 1px solid red;
-	z-index: 0;
+	z-index: 10;
 
 }
 
@@ -202,7 +216,7 @@ p {
 	width: 50%;
 	background-color: white;
 	border-left: 1px solid red;
-	z-index: 0;
+	z-index: 10;
 
 }
 
@@ -286,7 +300,7 @@ td:hover {
 
 .bottom-bar {
 	width: 100%;
-	height: 60px;
+	height: 20px;
 	background-color: red;
 }
 
