adding animated hover states

--- a/css/1.css
+++ b/css/1.css
@@ -240,6 +240,11 @@ p {
 }
 
 td {
+	-webkit-transition: background-color 0.7s;
+    -moz-transition: background-color 0.7s;
+    -o-transition: background-color 0.7s;
+    transition: background-color 0.7s;
+
 	height: 500px;
 	border-right: 1px solid red;
 	border-bottom: 1px solid red;
