--- a/css/main.css
+++ b/css/main.css
@@ -39,7 +39,7 @@ body {
 	line-height: 1;
 }
 ol, ul {
-	list-style: none;
+	/*list-style: none;*/
 }
 blockquote, q {
 	quotes: none;
@@ -73,11 +73,12 @@ body {
 }
 
 ul {
+	color: white;
 	margin: 20%;
 }
 
 li {
-	line-height: 50px;
+	line-height: 40px;
 	font-size: 30px;
 }
 
