new link to new website, will update once page build is complete

--- a/css/1.02.css
+++ b/css/1.02.css
@@ -64,9 +64,9 @@ table {
 		BEGIN AUTHOR STYLING
 	============================================== */
 
-/*div {
+* {
 	border: 1px solid blue;
-}*/
+}
 
 body {
 	/*background-color: black;*/
