--- a/css/2.01.css
+++ b/css/2.01.css
@@ -242,15 +242,27 @@ p {
 	box-shadow: 6px 0 7px rgba(0,0,0,0.3);
 }
 
-/*.external-link {
+.external-link1 {
 	position: fixed;
 	top: 0;
 	bottom: 0;
 	left: 0;
 	width:60px;
-	background-color: rgba(0,0,0,0);
-	z-index: 100;
-}*/
+	background-color: rgba(0,0,0,1);
+	z-index: 200;
+	display: none;
+}
+
+.external-link2 {
+	position: fixed;
+	top: 0;
+	bottom: 0;
+	right: 0;
+	width:60px;
+	background-color: rgba(0,0,0,1);
+	z-index: 200;
+	display: none;
+}
 
 .afterwards:hover,
 .afterwards-close:hover {
