--- a/css/2.01.css
+++ b/css/2.01.css
@@ -64,10 +64,6 @@ table {
 		BEGIN AUTHOR STYLING
 	============================================== */
 
-* {
-	border: 1px solid blue;
-}
-
 body {
 	/*background-color: black;*/
 	/*background-image: url('http://www.lastwordonnothing.com/wp-content/uploads/2011/07/2000px-Book_red_question_marks.png');*/
@@ -103,16 +99,6 @@ h1 {
 	font-size: 40px;
 }
 
-h2 {
-	padding: 30px 10px 0 10px;
-	text-align: center;
-	font-family: 'PT Sans', sans-serif;
-	font-weight: 400;
-	font-size: 16px;
-	line-height: 19px;
-	color: blue;
-}
-
 h3 {
 	padding: 15px 15px 0 15px;
 	line-height: 30px;
@@ -126,8 +112,15 @@ p {
 	font-family: 'PT Mono', monospace;
 	font-weight: 400;
 	font-size: 12px;
-	line-height: 14px;
+	line-height: 17px;
 	color: blue;
+	text-align: justify;
+}
+
+.ch-title {
+	font-family: 'PT Sans', sans-serif;
+	font-weight: 600;
+	font-size: 13px;
 }
 
 .author-name {
@@ -136,6 +129,22 @@ p {
 	font-weight: 700;
 	font-style: italic;
 	font-size: 13px;
+}
+
+#afterwards-title1 {
+	font-family: 'PT Sans', sans-serif;
+	font-weight: 600;
+
+}
+
+#afterwards-title2 {
+	font-family: 'PT Sans', sans-serif;
+	font-weight: 600;
+	font-style: italic;
+}
+
+.kimi {
+	font-style: italic;
 }
 
 #click1,
@@ -366,34 +375,34 @@ ul {
 }
 
 .ch1 {
-	background-image: url('../img/1.02/1.png');
+	background-image: url('../img/2.01/1.png');
 }
 .ch2 {
-	background-image: url('../img/1.02/2.png');
+	background-image: url('../img/2.01/2.png');
 }
 .ch3 {
-	background-image: url('../img/1.02/3.png');
+	background-image: url('../img/2.01/3.png');
 }
 .ch4 {
-	background-image: url('../img/1.02/4.png');
+	background-image: url('../img/2.01/4.png');
 }
 .ch5 {
-	background-image: url('../img/1.02/5.png');
+	background-image: url('../img/2.01/5.png');
 }
 .ch6 {
-	background-image: url('../img/1.02/6.png');
+	background-image: url('../img/2.01/6.png');
 }
 .ch7 {
-	background-image: url('../img/1.02/7.png');
+	background-image: url('../img/2.01/7.png');
 }
 .ch8 {
-	background-image: url('../img/1.02/8.png');
+	background-image: url('../img/2.01/8.png');
 }
 .ch9 {
-	background-image: url('../img/1.02/9.png');
+	background-image: url('../img/2.01/9.png');
 }
 .ch10 {
-	background-image: url('../img/1.02/10.png');
+	background-image: url('../img/2.01/10.png');
 }
 
 li {
@@ -411,7 +420,7 @@ li {
 	/*vertical-align: middle;*/
     background-repeat: no-repeat;
     background-position: center;
-    background-size: 55%;
+    background-size: 65%;
 }
 
 li:nth-child(5) {
@@ -482,12 +491,6 @@ a:hover {
 	-moz-border-radius: 0 0 0 10px;
 }
 
-.bottom-bar {
-	width: 100%;
-	height: 20px;
-	background-color: red;
-}
-
 /*  =======================
     MEDIA QUERIES
     ======================= */
@@ -503,8 +506,8 @@ a:hover {
 
 	/*Typography*/
 
-	h2 {
-		font-size: 14px;
+	.ch-title {
+		font-size: 11px;
 	}
 	p {
 		font-size: 10px;
@@ -517,33 +520,175 @@ a:hover {
 
 @media (max-width: 900px) { 
 
+	/*typography*/
+
+	p {
+		font-size: 14px;
+		line-height: 21px;
+	}
+
+	.ch-title {
+		font-size: 15px;
+	}
+
+	.author-name {
+		font-size: 15px;
+	}
+
 	/*container*/
 
 	.table-container {
 		margin-bottom: 20px;
 		width: 70%;
 		margin-left: 15%;
+
 	}
 	
 	li {
 
 		display: block;
-		height: 200px;
+		height: 250px;
 		border: none;
 		border-bottom: 1px solid #ffcaca;
+		background-size: 25%;
 	}
 
 	li a {
 		width: 70%;
 		position: absolute;
-		height: 200px;
+		height: 250px;
+	}
+
+	.no-bottom {
+		border-bottom: 1px solid #ffcaca;
+	}
+
+	.tl {
+		border-radius: 10px 10px 0 0;
+		-webkit-border-radius: 10px 10px 0 0;
+		-moz-border-radius: 10px 10px 0 0;
+	}
+
+	.tr {
+		border-radius: 0;
+	}
+	.bl {
+		border-radius: 0;
+	}
+
+	.br {
+		border-radius: 0 0 10px 10px;
+		-webkit-border-radius: 0 0 10px 10px;
+		-moz-border-radius: 0 0 10px 10px;
+		border-bottom: none;
+	}
+
+/*	.ch1 {
+		background-image: none;
+	}
+	.ch2 {
+		background-image: none;
+	}
+	.ch3 {
+		background-image: none;
+	}
+	.ch4 {
+		background-image: none;
+	}
+	.ch5 {
+		background-image: none;
+	}
+	.ch6 {
+		background-image: none;
+	}
+	.ch7 {
+		background-image: none;
+	}
+	.ch8 {
+		background-image: none;
+	}
+	.ch9 {
+		background-image: none;
+	}
+	.ch10 {
+		background-image: none;
+	}*/
+
+	.ch1:hover {
+		background-color: #ffe705;
+	}
+
+	.ch2:hover {
+		background-color: #ffe12c;
+	}
+
+	.ch3:hover {
+		background-color: #ffdd47;
+	}
+
+	.ch4:hover {
+		background-color: #ffda60;
+	}
+
+	.ch5:hover {
+		background-color: #ffd676;
+	}
+
+	.ch6:hover {
+		background-color: #ffd489;
+	}
+
+	.ch7:hover {
+		background-color: #ffd09e;
+	}
+
+	.ch8:hover {
+		background-color: #ffccbe;
+	}
+
+	.ch9:hover {
+		background-color: #ffccbe;
+	}
+
+	.ch10:hover {
+		background-color: #ffcaca
 	}
 
 }
 
-@media (max-width: 750px) { 
+@media (max-width: 750px) {
+
+	/*typography*/
+	.title h1 {
+		margin-top: 12px;
+		font-size: 18px;
+	}
+
+	h1 {
+		font-size: 30px;
+	}
 
 	/*navigation*/
+
+	.ch1,
+	.ch2,
+	.ch3,
+	.ch4,
+	.ch5,
+	.ch6,
+	.ch7,
+	.ch8,
+	.ch9,
+	.ch10
+	 {
+		background-image: none;
+	}
+
+	.table-container {
+		margin-top: 80px;
+		border-color:blue;
+
+	}
 
 	.intro,
 	.afterwards {
@@ -556,11 +701,34 @@ a:hover {
 		height:40px;
 	}
 
+	li {
+		height: 300px;
+		border-color:blue;
+	}
+
+	li a {
+		height: 300px;
+	}
+
+	.no-bottom {
+		border-color: blue;
+	}
+
 	
 
 }
 
-@media screen and (max-width: 500px) { 
+@media screen and (max-width: 575px) { 
+
+	/*typography*/
+	.title h1 {
+		margin-top: 9px;
+		font-size: 16px;
+	}
+
+	h1 {
+		font-size: 26px;
+	}
 	
 	/*navigation*/
 
@@ -573,7 +741,59 @@ a:hover {
 		right: 30px;
 		left: 30px;
 		height:30px;
-	}	
+	}
+
+	.table-container {
+		margin-top: 60px;
+
+	}
+
+	li {
+		height: 400px;
+	}
+
+	li a {
+		height: 400px;
+	}
+
+	.ch1 {
+		background-color: #ffe705;
+	}
+
+	.ch2 {
+		background-color: #ffe12c;
+	}
+
+	.ch3 {
+		background-color: #ffdd47;
+	}
+
+	.ch4 {
+		background-color: #ffda60;
+	}
+
+	.ch5 {
+		background-color: #ffd676;
+	}
+	.ch6 {
+		background-color: #ffd489;
+	}
+
+	.ch7 {
+		background-color: #ffd09e;
+	}
+
+	.ch8 {
+		background-color: #ffccbe;
+	}
+
+	.ch9 {
+		background-color: #ffccbe;
+	}
+
+	.ch10 {
+		background-color: #ffcaca
+	}
 	
 
 }
