adding background color for test

--- a/css/2.01.css
+++ b/css/2.01.css
@@ -64,6 +64,10 @@ table {
 		BEGIN AUTHOR STYLING
 	============================================== */
 
+/** {
+	background-color: rgba(0,0,0,0.3);
+}*/
+
 body {
 	/*background-color: black;*/
 	/*background-image: url('http://www.lastwordonnothing.com/wp-content/uploads/2011/07/2000px-Book_red_question_marks.png');*/
