--- a/css/promo1.01.css
+++ b/css/promo1.01.css
@@ -77,3 +77,22 @@ img {
 	width: 56%;
 	margin-left: 22%;
 }
+
+h1 {
+	position: fixed;
+	top: 40%;
+	right:0;
+	bottom: 0;
+	left: 0;
+	text-align: center;
+	font-family: 'PT Sans', sans-serif;
+	font-weight: 700;
+	font-size: 80px;
+	color: blue;
+
+	animation: blinker 2s linear infinite;
+}
+
+@keyframes blinker {  
+  50% { opacity: 0.0; }
+}
