--- a/css/promo1.01.css
+++ b/css/promo1.01.css
@@ -74,8 +74,8 @@ body {
 
 img {
 	top: -30px;
-	width: 56%;
-	margin-left: 22%;
+	width: 70%;
+	margin-left: 15%;
 }
 
 h1 {
@@ -96,3 +96,12 @@ h1 {
 @keyframes blinker {  
   50% { opacity: 0.0; }
 }
+
+/*  =======================
+    MEDIA QUERIES
+    ======================= */
+
+@media (max-width: 1050px) { 
+
+}
+
